microservices-extra-kube-manifests/HTTProute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-route
  namespace: boutique-app
spec:
  hostnames:
    - app.anandb.site

  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: app-alb-gateway
      namespace: default
      sectionName: http

    - group: gateway.networking.k8s.io
      kind: Gateway
      name: app-alb-gateway
      namespace: default
      sectionName: https

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
